--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "request": "^2.88.0",
-    "xmlhttprequest": "^1.8.0"
+    "request": "^2.88.0"
   }
 }
